testdata/class/error-2.lox
// experiments: -typing

class Foo {
    qux(x) {}    // error: line 4 at 'x': function param is never read
}

